@@ -1,5 +1,17 @@
 2002-06-26  Jody Goldberg <jody@gnome.org>
 
+	* mime-type-info.c (mime_type_info_load_all) : do not trust
+	  gnome_vfs_mime_get_default_application.  It silently removes
+	  applications that do not exist on the current system.  That makes it
+	  look like they are not being assigned.
+
+	* mime-edit-dialog.c (validate_data) : relax the restriction here.  By
+	  supplying a reasonable default to the new info it was appearing in
+	  our internal data structures.  That was a useful test before we were
+	  instant apply, but is no longer helpful.
+
+2002-06-26  Jody Goldberg <jody@gnome.org>
+
 	* file-types-capplet.c (main) : blah, test things _before_ I commit.
 
 2002-06-25  Jody Goldberg <jody@gnome.org>
